# wgpu-sandbox

./: Cargo.toml  LICENSE  README.md  run-web.sh
examples/canvas_raw/: canvas_raw.rs  canvas_raw.wgsl  main.rs  main_scenario.rs
examples/canvas_static/: main_scenario.rs  shader.wgsl
examples/cube_instances/: cube_instances.wgsl  main_scenario.rs
examples/cube_normals/: cube_normals.wgsl  main.rs  main_scenario.rs
examples/cube_shader_transition/: main.rs  main_scenario.rs
examples/cube_simple/: main_scenario.rs
examples/cube_two/: main_scenario.rs
examples/shader_transition/: main.rs  main_scenario.rs
examples/simple_cube/: main.rs  simple_cube.rs
examples/simple_cube_flat/: main.rs  simple_cube_flat.rs
examples/simple_triangle/: main.rs  simple_triangle.rs
examples/simple_triangle_direct/: main.rs  simple_triangle_direct.rs  simple_triangle_direct.wgsl
examples/simple_two_cubes/: main.rs  simple_two_cubes.rs
examples/triangle_direct/: main.rs  main_scenario.rs
src/: cameras.rs  draw_context.rs  engine.rs  gui.rs  launcher.rs  lib.rs  main.rs  main_scenario.rs  main_window.rs  primitive.rs  primitives.rs  scenario.rs  scenarios.rs  scene.rs  triangle.rs  webgpu.rs  window.rs
src/primitives/: canvas.rs  color.rs  cube.rs  triangle.rs
src/scenarios/: mod.rs  simple_cube.rs  simple_cube_flat.rs  simple_triangle.rs  simple_triangle_rotation.rs
src/shaders/: default.wgsl  flat.wgsl
web/: index.html
