[package]
name = "intro-cube-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.45"
bytemuck = {version = "1.7.2", features = [ "derive" ] }
cgmath = "0.18.0"
chrono = { version ="0.4.19", features = ["wasmbind"] }
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.14"
raw-window-handle = "0.3.3"
winit = { version = "0.25.0", features = ["web-sys"] }
instant = { version = "0.1.12", features = [ "wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.2.4"
wgpu = "0.11.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = {version = "0.2.0", features = []}
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
wgpu = {version = "0.11.0", features = ["webgl"]}
web-sys =  { version = "0.3.55", features = []}
