[package]
name = "demo-cube-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
bytemuck = { version = "1.7.3", features = [ "derive" ] }
cgmath = "0.18.0"
chrono = { version = "0.4.19", features = ["wasmbind"] }
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.14"
raw-window-handle = "0.4.2"
winit = { version = "0.26.1" }
instant = { version = "0.1.12", features = [ "wasm-bindgen"] }
lazy_static = "1.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.2.4"
wgpu = "0.12.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = { version = "0.2.0", features = [] }
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
wgpu = { version = "0.12.0", features = ["webgl"] }
web-sys =  { version = "0.3.55", features = [] }
