[package]
name = "wgpu-lite-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytemuck = { version = "1.21.0", features = [ "derive" ] }
cgmath = "0.18.0"
chrono = { version = "0.4.19", features = ["wasmbind"] }
fern = { version = "0.7.1", features = ["colored"] }
log = "0.4.22"
winit = { version = "0.30.7", features = ["rwh_05"] }
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4.0"
wgpu = "23.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
wgpu = { version = "23.0.1", features = ["webgl"] }
web-sys =  { version = "0.3.76", features = [] }
